Simplify API and move swagger docs to separate folder
