# api/api.go
@@ -5,11 +5,9 @@ import (
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/cors"
-	"github.com/go-chi/render"
 	"github.com/rs/zerolog"
 	"github.com/rs/zerolog/log"
 	"github.com/unweave/unweave-v2/config"
-	"github.com/unweave/unweave-v2/session/model"
 )
 
 func API(cfg config.Config) {
@@ -28,40 +26,8 @@ func API(cfg config.Config) {
 	}))
 
 	r.Route("/session", func(r chi.Router) {
-
-		// swagger:route POST /session/{id} session sessionCreate
-		// responses:
-		// 	201: sessionCreate
 		r.Post("/", sessionCreateHandler)
-
-		// swagger:route GET /session/{id} session sessionGet
-		// responses:
-		// 	200: sessionGet
-		r.Get("/{id}", func(w http.ResponseWriter, r *http.Request) {
-			id := chi.URLParam(r, "id")
-
-			res := &SessionGetResponse{ID: id}
-			render.JSON(w, r, res)
-		})
-
-		// swagger:route GET /session/{id}/connect session sessionConnect
-		//
-		// Returns the SSH connection details for the session. This will return a 404 if
-		// the session is not yet ready.
-		//
-		// responses:
-		// 	200: sessionConnect
-		//  404: errorResponse
-		r.Get("/{id}/connect", func(w http.ResponseWriter, r *http.Request) {
-			id := chi.URLParam(r, "id")
-
-			res := &SessionConnectResponse{
-				ID:     id,
-				Status: model.StatusRunning,
-			}
-			render.JSON(w, r, res)
-		})
-
+		r.Get("/{id}", sessionGetHandler)
 	})
 
 	log.Info().Msgf("🚀 API listening on %s", cfg.APIPort)
